--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
     "firebase": "^10.8.1",
+    "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.2.1",
     "react-loading": "^2.0.3",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
